JSLintMate
==========

* FEATURE: Added support for detecting unused variables.
* FEATURE: Added notification when a new version of JSLintMate is available.
* IMPROVEMENT: Upgraded to JSLint 2011-11-03 and JSHint 2011-09-29.
* FIX: Fixed support for `predef` option.
* FIX: Fixed falling back to built-in jslint.js/jshint.js if custom
  `--linter-file` can't be read.


1.1 (2011-06-02)
----------------
* FEATURE: Added keyboard navigation. Use up/down arrows (or k/j) to select an
  error, then hit enter to show it in the JS file.
* FEATURE: Added support for the `--linter-file` option when customizing
  bundle commands. Allows for using your own custom/edge build of
  JSLint/JSHint.
* IMPROVEMENT: Improved rendering performance of the striped red "xx% scanned"
  error when it appears at the bottom of the window.


1.0.4 (2011-05-07)
------------------
* IMPROVEMENT: Upgraded to JSLint 2011-05-06 and JSHint 2011-04-16.


1.0.3 (2011-04-23)
------------------
* FIX: Fixed path issue when installing bundle via `git clone`.


1.0.2 (2011-04-22)
------------------
* FIX: Fixed path issue when customizing bundle commands, e.g., when adding
  `--linter-options-file`.


1.0.1 (2011-04-20)
------------------
* FIX: Fixed appearance when running JSLint/JSHint against a file that hasn't
  been saved yet.


1.0 (2011-04-11)
----------------
* Initial release.